<resources>
    <string name="app_name">GitBox</string>
    <string name="github_logo">Github Logo</string>
    <string name="user_image">User Image</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="followings">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="username">username</string>
    <string name="url">url</string>
    <string name="name">Name</string>
    <string name="search">Search Github Users</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_summary">Change Application Language</string>
    <string name="no_data">No Data Found</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="favorite_activity">Favorite User List</string>

    <string name="daily_notification">Daily Reminder Notification</string>
    <string name="daily_notification_on">Daily Reminder Notification at 9 AM Enabled</string>
    <string name="daily_notification_off">Daily Reminder Notification at 9 AM Disabled</string>
    <string name="insert_favorite_success">User Added as Favorite</string>
    <string name="remove_favorite_success">User Removed from Favorite</string>

    <string name="notification_content">Hey There! It is time to visit GitBox App!</string>
    <string name="reminder_notification_set">Reminder notification has been set to 09:00 AM every day</string>
    <string name="reminder_notification_unset">Reminder notification has been disabled</string>
    <string name="string_favorite_widget">Favorite Users</string>
</resources>
