<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:contentDescription="@string/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/menu_favorite"
        android:contentDescription="@string/favorite"
        android:icon="@drawable/ic_favorite_active"
        android:title="@string/favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_change_language"
        android:icon="@drawable/ic_settings"
        android:contentDescription="@string/change_language"
        android:title="@string/change_language"
        app:showAsAction="ifRoom" />
</menu>